# AutoML_Alex

./: .gitignore  01_Quick_Start copy.ipynb  01_Quick_Start.ipynb  02_Models.ipynb  02_Models_test.ipynb  03_Data_Cleaning_and_Encoding_(DataBunch).ipynb  03_Models copy.ipynb  03_Models.ipynb  04_ModelsReview.ipynb  05_BestSingleModel copy.ipynb  05_BestSingleModel.ipynb  CHANGELOG.md  Dockerfile  LICENSE  Optimizer.ipynb  README.md  de.pkl  model_1.pkl  pyproject.toml  requirements.txt  res.csv  setup.py  test_de.pkl
.devcontainer/: devcontainer.json
.github/workflow/: CodeQL.yml  main
.github/workflows/: codeql.yml  main.yml
automl_alex/: __init__.py  __version__.py  _base.py  _encoders.py  _logger.py  automl_alex.py  base.py  cross_validation.py  data_prepare.py  databunch.py  encoders.py  optimizer.py
automl_alex/models/: __init__.py  base.py  base_v2.py  cross_validation.py  model_catboost.py  model_lightgbm.py  model_lightgbm_v2.py  model_xgboost.py  sklearn_models.py
docs/: automl_alex.html  base.html  cross_validation.html  data_prepare.html  encoders.html  index.html  logger.html  optimizer.html
docs/models/: index.html  model_catboost.html  model_lightgbm.html  model_xgboost.html  (+1 more)
examples/: 01_Quick_Start.ipynb  02_Data_Cleaning_and_Encoding_(DataPrepare).ipynb  02_Models.ipynb  02_Models_v1.ipynb  03_Data_Cleaning_and_Encoding_(DataBunch).ipynb  03_Models.ipynb  04_ModelsReview.ipynb  05_BestSingleModel.ipynb
result/: 179_metrics.csv  4135_metrics.csv
test/: test_automl.py
tests/: test_alexautoml.py  test_automlalex_benchmark.py  test_cross_validation.py  test_cv.py  test_data_prepare.py  test_models.py  test_optimizer.py
(+9 files in other folders)
